internal/runtime/compiler/parser/y.output

state 0
	$accept: .start $end 
	stmt_list: .    (2)

	.  reduce 2 (src line 99)

	stmt_list  goto 2
	start  goto 1

state 1
	$accept:  start.$end 

	$end  accept
	.  error


state 2
	start:  stmt_list.    (1)
	stmt_list:  stmt_list.stmt 
	mark_pos: .    (123)
	metric_hide_spec: .    (93)

	$end  reduce 1 (src line 91)
	INVALID  shift 13
	COUNTER  reduce 93 (src line 520)
	GAUGE  reduce 93 (src line 520)
	TIMER  reduce 93 (src line 520)
	TEXT  reduce 93 (src line 520)
	HISTOGRAM  reduce 93 (src line 520)
	CONST  shift 11
	HIDDEN  shift 23
	NEXT  shift 10
	STOP  shift 12
	STRING  shift 36
	CAPREF  shift 34
	CAPREF_NAMED  shift 35
	ID  shift 43
	INTLITERAL  shift 38
	FLOATLITERAL  shift 39
	NOT  shift 31
	LPAREN  shift 37
	NL  shift 16
	.  reduce 123 (src line 703)

	stmt  goto 3
	conditional_stmt  goto 4
	conditional_expr  goto 14
	expr_stmt  goto 5
	expr  goto 17
	primary_expr  goto 28
	multiplicative_expr  goto 44
	additive_expr  goto 42
	postfix_expr  goto 22
	unary_expr  goto 27
	assign_expr  goto 21
	rel_expr  goto 30
	shift_expr  goto 40
	bitwise_expr  goto 25
	logical_expr  goto 20
	indexed_expr  goto 32
	id_expr  goto 41
	concat_expr  goto 24
	pattern_expr  goto 19
	metric_declaration  goto 6
	decorator_declaration  goto 7
	decoration_stmt  goto 8
	regex_pattern  goto 29
	match_expr  goto 26
	delete_stmt  goto 9
	builtin_expr  goto 33
	metric_hide_spec  goto 18
	mark_pos  goto 15

state 3
	stmt_list:  stmt_list stmt.    (3)

	.  reduce 3 (src line 104)


state 4
	stmt:  conditional_stmt.    (4)

	.  reduce 4 (src line 114)


state 5
	stmt:  expr_stmt.    (5)

	.  reduce 5 (src line 117)


state 6
	stmt:  metric_declaration.    (6)

	.  reduce 6 (src line 119)


state 7
	stmt:  decorator_declaration.    (7)

	.  reduce 7 (src line 121)


state 8
	stmt:  decoration_stmt.    (8)

	.  reduce 8 (src line 123)


state 9
	stmt:  delete_stmt.    (9)

	.  reduce 9 (src line 125)


state 10
	stmt:  NEXT.    (10)

	.  reduce 10 (src line 127)


state 11
	stmt:  CONST.id_expr opt_nl concat_expr 

	ID  shift 43
	.  error

	id_expr  goto 45

state 12
	stmt:  STOP.    (12)

	.  reduce 12 (src line 135)


state 13
	stmt:  INVALID.    (13)

	.  reduce 13 (src line 139)


state 14
	conditional_stmt:  conditional_expr.compound_stmt ELSE compound_stmt 
	conditional_stmt:  conditional_expr.compound_stmt 

	LCURLY  shift 47
	.  error

	compound_stmt  goto 46

state 15
	conditional_stmt:  mark_pos.OTHERWISE compound_stmt 
	builtin_expr:  mark_pos.BUILTIN LPAREN RPAREN 
	builtin_expr:  mark_pos.BUILTIN LPAREN arg_expr_list RPAREN 
	regex_pattern:  mark_pos.DIV in_regex REGEX DIV 
	decorator_declaration:  mark_pos.DEF ID compound_stmt 
	decoration_stmt:  mark_pos.DECO compound_stmt 
	delete_stmt:  mark_pos.DEL postfix_expr AFTER DURATIONLITERAL 
	delete_stmt:  mark_pos.DEL postfix_expr 

	DEF  shift 51
	DEL  shift 53
	OTHERWISE  shift 48
	BUILTIN  shift 49
	DECO  shift 52
	DIV  shift 50
	.  error


state 16
	expr_stmt:  NL.    (20)

	.  reduce 20 (src line 184)


state 17
	expr_stmt:  expr.NL 

	NL  shift 54
	.  error


state 18
	metric_declaration:  metric_hide_spec.metric_type_spec metric_decl_attr_spec 

	COUNTER  shift 56
	GAUGE  shift 57
	TIMER  shift 58
	TEXT  shift 59
	HISTOGRAM  shift 60
	.  error

	metric_type_spec  goto 55

state 19
	conditional_expr:  pattern_expr.    (17)
	conditional_expr:  pattern_expr.logical_op opt_nl logical_expr 

	AND  shift 62
	OR  shift 63
	.  reduce 17 (src line 166)

	logical_op  goto 61

state 20
	conditional_expr:  logical_expr.    (19)
	logical_expr:  logical_expr.logical_op opt_nl bitwise_expr 
	logical_expr:  logical_expr.logical_op opt_nl match_expr 

	AND  shift 62
	OR  shift 63
	.  reduce 19 (src line 179)

	logical_op  goto 64

state 21
	expr:  assign_expr.    (23)

	.  reduce 23 (src line 200)


state 22
	expr:  postfix_expr.    (24)
	unary_expr:  postfix_expr.    (68)
	postfix_expr:  postfix_expr.postfix_op 

	INC  shift 66
	DEC  shift 67
	NL  reduce 24 (src line 203)
	.  reduce 68 (src line 384)

	postfix_op  goto 65

state 23
	metric_hide_spec:  HIDDEN.    (94)

	.  reduce 94 (src line 525)


state 24
	pattern_expr:  concat_expr.    (58)
	concat_expr:  concat_expr.PLUS opt_nl regex_pattern 
	concat_expr:  concat_expr.PLUS opt_nl id_expr 

	PLUS  shift 68
	.  reduce 58 (src line 341)


state 25
	logical_expr:  bitwise_expr.    (27)
	bitwise_expr:  bitwise_expr.bitwise_op opt_nl rel_expr 

	BITAND  shift 70
	XOR  shift 72
	BITOR  shift 71
	.  reduce 27 (src line 220)

	bitwise_op  goto 69

state 26
	logical_expr:  match_expr.    (28)

	.  reduce 28 (src line 223)


state 27
	assign_expr:  unary_expr.ASSIGN opt_nl logical_expr 
	assign_expr:  unary_expr.ADD_ASSIGN opt_nl logical_expr 
	multiplicative_expr:  unary_expr.    (62)

	ADD_ASSIGN  shift 74
	ASSIGN  shift 73
	.  reduce 62 (src line 363)


state 28
	match_expr:  primary_expr.match_op opt_nl pattern_expr 
	match_expr:  primary_expr.match_op opt_nl primary_expr 
	postfix_expr:  primary_expr.    (70)

	MATCH  shift 76
	NOT_MATCH  shift 77
	.  reduce 70 (src line 394)

	match_op  goto 75

state 29
	concat_expr:  regex_pattern.    (59)

	.  reduce 59 (src line 349)


state 30
	bitwise_expr:  rel_expr.    (33)
	rel_expr:  rel_expr.rel_op opt_nl shift_expr 

	LT  shift 79
	GT  shift 80
	LE  shift 81
	GE  shift 82
	EQ  shift 83
	NE  shift 84
	.  reduce 33 (src line 243)

	rel_op  goto 78

state 31
	unary_expr:  NOT.unary_expr 
	mark_pos: .    (123)

	STRING  shift 36
	CAPREF  shift 34
	CAPREF_NAMED  shift 35
	ID  shift 43
	INTLITERAL  shift 38
	FLOATLITERAL  shift 39
	NOT  shift 31
	LPAREN  shift 37
	.  reduce 123 (src line 703)

	primary_expr  goto 87
	postfix_expr  goto 86
	unary_expr  goto 85
	indexed_expr  goto 32
	id_expr  goto 41
	builtin_expr  goto 33
	mark_pos  goto 88

state 32
	primary_expr:  indexed_expr.    (74)
	indexed_expr:  indexed_expr.LSQUARE arg_expr_list RSQUARE 

	LSQUARE  shift 89
	.  reduce 74 (src line 411)


state 33
	primary_expr:  builtin_expr.    (75)

	.  reduce 75 (src line 414)


state 34
	primary_expr:  CAPREF.    (76)

	.  reduce 76 (src line 416)


state 35
	primary_expr:  CAPREF_NAMED.    (77)

	.  reduce 77 (src line 420)


state 36
	primary_expr:  STRING.    (78)

	.  reduce 78 (src line 424)


state 37
	primary_expr:  LPAREN.logical_expr RPAREN 
	mark_pos: .    (123)

	STRING  shift 36
	CAPREF  shift 34
	CAPREF_NAMED  shift 35
	ID  shift 43
	INTLITERAL  shift 38
	FLOATLITERAL  shift 39
	NOT  shift 31
	LPAREN  shift 37
	.  reduce 123 (src line 703)

	primary_expr  goto 28
	multiplicative_expr  goto 44
	additive_expr  goto 42
	postfix_expr  goto 86
	unary_expr  goto 91
	rel_expr  goto 30
	shift_expr  goto 40
	bitwise_expr  goto 25
	logical_expr  goto 90
	indexed_expr  goto 32
	id_expr  goto 41
	match_expr  goto 26
	builtin_expr  goto 33
	mark_pos  goto 88

state 38
	primary_expr:  INTLITERAL.    (80)

	.  reduce 80 (src line 432)


state 39
	primary_expr:  FLOATLITERAL.    (81)

	.  reduce 81 (src line 436)


state 40
	rel_expr:  shift_expr.    (38)
	shift_expr:  shift_expr.shift_op opt_nl additive_expr 

	SHL  shift 93
	SHR  shift 94
	.  reduce 38 (src line 262)

	shift_op  goto 92

state 41
	indexed_expr:  id_expr.    (82)

	.  reduce 82 (src line 443)


state 42
	shift_expr:  additive_expr.    (46)
	additive_expr:  additive_expr.add_op opt_nl multiplicative_expr 

	MINUS  shift 97
	PLUS  shift 96
	.  reduce 46 (src line 287)

	add_op  goto 95

state 43
	id_expr:  ID.    (84)

	.  reduce 84 (src line 459)


state 44
	additive_expr:  multiplicative_expr.    (50)
	multiplicative_expr:  multiplicative_expr.mul_op opt_nl unary_expr 

	DIV  shift 100
	MOD  shift 101
	MUL  shift 99
	POW  shift 102
	.  reduce 50 (src line 304)

	mul_op  goto 98

state 45
	stmt:  CONST id_expr.opt_nl concat_expr 
	opt_nl: .    (125)

	NL  shift 104
	.  reduce 125 (src line 723)

	opt_nl  goto 103

state 46
	conditional_stmt:  conditional_expr compound_stmt.ELSE compound_stmt 
	conditional_stmt:  conditional_expr compound_stmt.    (15)

	ELSE  shift 105
	.  reduce 15 (src line 151)


state 47
	compound_stmt:  LCURLY.stmt_list RCURLY 
	stmt_list: .    (2)

	.  reduce 2 (src line 99)

	stmt_list  goto 106

state 48
	conditional_stmt:  mark_pos OTHERWISE.compound_stmt 

	LCURLY  shift 47
	.  error

	compound_stmt  goto 107

state 49
	builtin_expr:  mark_pos BUILTIN.LPAREN RPAREN 
	builtin_expr:  mark_pos BUILTIN.LPAREN arg_expr_list RPAREN 

	LPAREN  shift 108
	.  error


state 50
	regex_pattern:  mark_pos DIV.in_regex REGEX DIV 
	in_regex: .    (124)

	.  reduce 124 (src line 713)

	in_regex  goto 109

state 51
	decorator_declaration:  mark_pos DEF.ID compound_stmt 

	ID  shift 110
	.  error


state 52
	decoration_stmt:  mark_pos DECO.compound_stmt 

	LCURLY  shift 47
	.  error

	compound_stmt  goto 111

state 53
	delete_stmt:  mark_pos DEL.postfix_expr AFTER DURATIONLITERAL 
	delete_stmt:  mark_pos DEL.postfix_expr 
	mark_pos: .    (123)

	STRING  shift 36
	CAPREF  shift 34
	CAPREF_NAMED  shift 35
	ID  shift 43
	INTLITERAL  shift 38
	FLOATLITERAL  shift 39
	LPAREN  shift 37
	.  reduce 123 (src line 703)

	primary_expr  goto 87
	postfix_expr  goto 112
	indexed_expr  goto 32
	id_expr  goto 41
	builtin_expr  goto 33
	mark_pos  goto 88

state 54
	expr_stmt:  expr NL.    (21)

	.  reduce 21 (src line 187)


state 55
	metric_declaration:  metric_hide_spec metric_type_spec.metric_decl_attr_spec 

	STRING  shift 116
	ID  shift 115
	.  error

	metric_decl_attr_spec  goto 113
	metric_name_spec  goto 114

state 56
	metric_type_spec:  COUNTER.    (102)

	.  reduce 102 (src line 572)


state 57
	metric_type_spec:  GAUGE.    (103)

	.  reduce 103 (src line 577)


state 58
	metric_type_spec:  TIMER.    (104)

	.  reduce 104 (src line 581)


state 59
	metric_type_spec:  TEXT.    (105)

	.  reduce 105 (src line 585)


state 60
	metric_type_spec:  HISTOGRAM.    (106)

	.  reduce 106 (src line 589)


state 61
	conditional_expr:  pattern_expr logical_op.opt_nl logical_expr 
	opt_nl: .    (125)

	NL  shift 104
	.  reduce 125 (src line 723)

	opt_nl  goto 117

state 62
	logical_op:  AND.    (31)

	.  reduce 31 (src line 235)


state 63
	logical_op:  OR.    (32)

	.  reduce 32 (src line 238)


state 64
	logical_expr:  logical_expr logical_op.opt_nl bitwise_expr 
	logical_expr:  logical_expr logical_op.opt_nl match_expr 
	opt_nl: .    (125)

	NL  shift 104
	.  reduce 125 (src line 723)

	opt_nl  goto 118

state 65
	postfix_expr:  postfix_expr postfix_op.    (71)

	.  reduce 71 (src line 397)


state 66
	postfix_op:  INC.    (72)

	.  reduce 72 (src line 403)


state 67
	postfix_op:  DEC.    (73)

	.  reduce 73 (src line 406)


state 68
	concat_expr:  concat_expr PLUS.opt_nl regex_pattern 
	concat_expr:  concat_expr PLUS.opt_nl id_expr 
	opt_nl: .    (125)

	NL  shift 104
	.  reduce 125 (src line 723)

	opt_nl  goto 119

state 69
	bitwise_expr:  bitwise_expr bitwise_op.opt_nl rel_expr 
	opt_nl: .    (125)

	NL  shift 104
	.  reduce 125 (src line 723)

	opt_nl  goto 120

state 70
	bitwise_op:  BITAND.    (35)

	.  reduce 35 (src line 252)


state 71
	bitwise_op:  BITOR.    (36)

	.  reduce 36 (src line 255)


state 72
	bitwise_op:  XOR.    (37)

	.  reduce 37 (src line 257)


state 73
	assign_expr:  unary_expr ASSIGN.opt_nl logical_expr 
	opt_nl: .    (125)

	NL  shift 104
	.  reduce 125 (src line 723)

	opt_nl  goto 121

state 74
	assign_expr:  unary_expr ADD_ASSIGN.opt_nl logical_expr 
	opt_nl: .    (125)

	NL  shift 104
	.  reduce 125 (src line 723)

	opt_nl  goto 122

state 75
	match_expr:  primary_expr match_op.opt_nl pattern_expr 
	match_expr:  primary_expr match_op.opt_nl primary_expr 
	opt_nl: .    (125)

	NL  shift 104
	.  reduce 125 (src line 723)

	opt_nl  goto 123

state 76
	match_op:  MATCH.    (56)

	.  reduce 56 (src line 332)


state 77
	match_op:  NOT_MATCH.    (57)

	.  reduce 57 (src line 335)


state 78
	rel_expr:  rel_expr rel_op.opt_nl shift_expr 
	opt_nl: .    (125)

	NL  shift 104
	.  reduce 125 (src line 723)

	opt_nl  goto 124

state 79
	rel_op:  LT.    (40)

	.  reduce 40 (src line 271)


state 80
	rel_op:  GT.    (41)

	.  reduce 41 (src line 274)


state 81
	rel_op:  LE.    (42)

	.  reduce 42 (src line 276)


state 82
	rel_op:  GE.    (43)

	.  reduce 43 (src line 278)


state 83
	rel_op:  EQ.    (44)

	.  reduce 44 (src line 280)


state 84
	rel_op:  NE.    (45)

	.  reduce 45 (src line 282)


state 85
	unary_expr:  NOT unary_expr.    (69)

	.  reduce 69 (src line 387)


state 86
	unary_expr:  postfix_expr.    (68)
	postfix_expr:  postfix_expr.postfix_op 

	INC  shift 66
	DEC  shift 67
	.  reduce 68 (src line 384)

	postfix_op  goto 65

state 87
	postfix_expr:  primary_expr.    (70)

	.  reduce 70 (src line 394)


state 88
	builtin_expr:  mark_pos.BUILTIN LPAREN RPAREN 
	builtin_expr:  mark_pos.BUILTIN LPAREN arg_expr_list RPAREN 

	BUILTIN  shift 49
	.  error


state 89
	indexed_expr:  indexed_expr LSQUARE.arg_expr_list RSQUARE 
	mark_pos: .    (123)

	STRING  shift 36
	CAPREF  shift 34
	CAPREF_NAMED  shift 35
	ID  shift 43
	INTLITERAL  shift 38
	FLOATLITERAL  shift 39
	NOT  shift 31
	LPAREN  shift 37
	.  reduce 123 (src line 703)

	arg_expr_list  goto 125
	primary_expr  goto 28
	multiplicative_expr  goto 44
	additive_expr  goto 42
	postfix_expr  goto 86
	unary_expr  goto 91
	rel_expr  goto 30
	shift_expr  goto 40
	bitwise_expr  goto 25
	logical_expr  goto 127
	indexed_expr  goto 32
	id_expr  goto 41
	concat_expr  goto 24
	pattern_expr  goto 128
	regex_pattern  goto 29
	match_expr  goto 26
	builtin_expr  goto 33
	arg_expr  goto 126
	mark_pos  goto 129

state 90
	logical_expr:  logical_expr.logical_op opt_nl bitwise_expr 
	logical_expr:  logical_expr.logical_op opt_nl match_expr 
	primary_expr:  LPAREN logical_expr.RPAREN 

	AND  shift 62
	OR  shift 63
	RPAREN  shift 130
	.  error

	logical_op  goto 64

state 91
	multiplicative_expr:  unary_expr.    (62)

	.  reduce 62 (src line 363)


state 92
	shift_expr:  shift_expr shift_op.opt_nl additive_expr 
	opt_nl: .    (125)

	NL  shift 104
	.  reduce 125 (src line 723)

	opt_nl  goto 131

state 93
	shift_op:  SHL.    (48)

	.  reduce 48 (src line 296)


state 94
	shift_op:  SHR.    (49)

	.  reduce 49 (src line 299)


state 95
	additive_expr:  additive_expr add_op.opt_nl multiplicative_expr 
	opt_nl: .    (125)

	NL  shift 104
	.  reduce 125 (src line 723)

	opt_nl  goto 132

state 96
	add_op:  PLUS.    (52)

	.  reduce 52 (src line 313)


state 97
	add_op:  MINUS.    (53)

	.  reduce 53 (src line 316)


state 98
	multiplicative_expr:  multiplicative_expr mul_op.opt_nl unary_expr 
	opt_nl: .    (125)

	NL  shift 104
	.  reduce 125 (src line 723)

	opt_nl  goto 133

state 99
	mul_op:  MUL.    (64)

	.  reduce 64 (src line 372)


state 100
	mul_op:  DIV.    (65)

	.  reduce 65 (src line 375)


state 101
	mul_op:  MOD.    (66)

	.  reduce 66 (src line 377)


state 102
	mul_op:  POW.    (67)

	.  reduce 67 (src line 379)


state 103
	stmt:  CONST id_expr opt_nl.concat_expr 
	mark_pos: .    (123)

	.  reduce 123 (src line 703)

	concat_expr  goto 134
	regex_pattern  goto 29
	mark_pos  goto 135

state 104
	opt_nl:  NL.    (126)

	.  reduce 126 (src line 725)


state 105
	conditional_stmt:  conditional_expr compound_stmt ELSE.compound_stmt 

	LCURLY  shift 47
	.  error

	compound_stmt  goto 136

state 106
	stmt_list:  stmt_list.stmt 
	compound_stmt:  LCURLY stmt_list.RCURLY 
	mark_pos: .    (123)
	metric_hide_spec: .    (93)

	INVALID  shift 13
	COUNTER  reduce 93 (src line 520)
	GAUGE  reduce 93 (src line 520)
	TIMER  reduce 93 (src line 520)
	TEXT  reduce 93 (src line 520)
	HISTOGRAM  reduce 93 (src line 520)
	CONST  shift 11
	HIDDEN  shift 23
	NEXT  shift 10
	STOP  shift 12
	STRING  shift 36
	CAPREF  shift 34
	CAPREF_NAMED  shift 35
	ID  shift 43
	INTLITERAL  shift 38
	FLOATLITERAL  shift 39
	NOT  shift 31
	RCURLY  shift 137
	LPAREN  shift 37
	NL  shift 16
	.  reduce 123 (src line 703)

	stmt  goto 3
	conditional_stmt  goto 4
	conditional_expr  goto 14
	expr_stmt  goto 5
	expr  goto 17
	primary_expr  goto 28
	multiplicative_expr  goto 44
	additive_expr  goto 42
	postfix_expr  goto 22
	unary_expr  goto 27
	assign_expr  goto 21
	rel_expr  goto 30
	shift_expr  goto 40
	bitwise_expr  goto 25
	logical_expr  goto 20
	indexed_expr  goto 32
	id_expr  goto 41
	concat_expr  goto 24
	pattern_expr  goto 19
	metric_declaration  goto 6
	decorator_declaration  goto 7
	decoration_stmt  goto 8
	regex_pattern  goto 29
	match_expr  goto 26
	delete_stmt  goto 9
	builtin_expr  goto 33
	metric_hide_spec  goto 18
	mark_pos  goto 15

state 107
	conditional_stmt:  mark_pos OTHERWISE compound_stmt.    (16)

	.  reduce 16 (src line 159)


state 108
	builtin_expr:  mark_pos BUILTIN LPAREN.RPAREN 
	builtin_expr:  mark_pos BUILTIN LPAREN.arg_expr_list RPAREN 
	mark_pos: .    (123)

	STRING  shift 36
	CAPREF  shift 34
	CAPREF_NAMED  shift 35
	ID  shift 43
	INTLITERAL  shift 38
	FLOATLITERAL  shift 39
	NOT  shift 31
	LPAREN  shift 37
	RPAREN  shift 138
	.  reduce 123 (src line 703)

	arg_expr_list  goto 139
	primary_expr  goto 28
	multiplicative_expr  goto 44
	additive_expr  goto 42
	postfix_expr  goto 86
	unary_expr  goto 91
	rel_expr  goto 30
	shift_expr  goto 40
	bitwise_expr  goto 25
	logical_expr  goto 127
	indexed_expr  goto 32
	id_expr  goto 41
	concat_expr  goto 24
	pattern_expr  goto 128
	regex_pattern  goto 29
	match_expr  goto 26
	builtin_expr  goto 33
	arg_expr  goto 126
	mark_pos  goto 129

state 109
	regex_pattern:  mark_pos DIV in_regex.REGEX DIV 

	REGEX  shift 140
	.  error


state 110
	decorator_declaration:  mark_pos DEF ID.compound_stmt 

	LCURLY  shift 47
	.  error

	compound_stmt  goto 141

state 111
	decoration_stmt:  mark_pos DECO compound_stmt.    (118)

	.  reduce 118 (src line 670)


state 112
	postfix_expr:  postfix_expr.postfix_op 
	delete_stmt:  mark_pos DEL postfix_expr.AFTER DURATIONLITERAL 
	delete_stmt:  mark_pos DEL postfix_expr.    (120)

	AFTER  shift 142
	INC  shift 66
	DEC  shift 67
	.  reduce 120 (src line 683)

	postfix_op  goto 65

state 113
	metric_declaration:  metric_hide_spec metric_type_spec metric_decl_attr_spec.    (92)
	metric_decl_attr_spec:  metric_decl_attr_spec.metric_by_spec 
	metric_decl_attr_spec:  metric_decl_attr_spec.metric_as_spec 
	metric_decl_attr_spec:  metric_decl_attr_spec.metric_buckets_spec 
	metric_decl_attr_spec:  metric_decl_attr_spec.metric_limit_spec 

	AS  shift 148
	BY  shift 147
	BUCKETS  shift 149
	LIMIT  shift 150
	.  reduce 92 (src line 509)

	metric_as_spec  goto 144
	metric_by_spec  goto 143
	metric_buckets_spec  goto 145
	metric_limit_spec  goto 146

state 114
	metric_decl_attr_spec:  metric_name_spec.    (99)

	.  reduce 99 (src line 553)


state 115
	metric_name_spec:  ID.    (100)

	.  reduce 100 (src line 560)


state 116
	metric_name_spec:  STRING.    (101)

	.  reduce 101 (src line 565)


state 117
	conditional_expr:  pattern_expr logical_op opt_nl.logical_expr 
	mark_pos: .    (123)

	STRING  shift 36
	CAPREF  shift 34
	CAPREF_NAMED  shift 35
	ID  shift 43
	INTLITERAL  shift 38
	FLOATLITERAL  shift 39
	NOT  shift 31
	LPAREN  shift 37
	.  reduce 123 (src line 703)

	primary_expr  goto 28
	multiplicative_expr  goto 44
	additive_expr  goto 42
	postfix_expr  goto 86
	unary_expr  goto 91
	rel_expr  goto 30
	shift_expr  goto 40
	bitwise_expr  goto 25
	logical_expr  goto 151
	indexed_expr  goto 32
	id_expr  goto 41
	match_expr  goto 26
	builtin_expr  goto 33
	mark_pos  goto 88

state 118
	logical_expr:  logical_expr logical_op opt_nl.bitwise_expr 
	logical_expr:  logical_expr logical_op opt_nl.match_expr 
	mark_pos: .    (123)

	STRING  shift 36
	CAPREF  shift 34
	CAPREF_NAMED  shift 35
	ID  shift 43
	INTLITERAL  shift 38
	FLOATLITERAL  shift 39
	NOT  shift 31
	LPAREN  shift 37
	.  reduce 123 (src line 703)

	primary_expr  goto 28
	multiplicative_expr  goto 44
	additive_expr  goto 42
	postfix_expr  goto 86
	unary_expr  goto 91
	rel_expr  goto 30
	shift_expr  goto 40
	bitwise_expr  goto 152
	indexed_expr  goto 32
	id_expr  goto 41
	match_expr  goto 153
	builtin_expr  goto 33
	mark_pos  goto 88

state 119
	concat_expr:  concat_expr PLUS opt_nl.regex_pattern 
	concat_expr:  concat_expr PLUS opt_nl.id_expr 
	mark_pos: .    (123)

	ID  shift 43
	.  reduce 123 (src line 703)

	id_expr  goto 155
	regex_pattern  goto 154
	mark_pos  goto 135

state 120
	bitwise_expr:  bitwise_expr bitwise_op opt_nl.rel_expr 
	mark_pos: .    (123)

	STRING  shift 36
	CAPREF  shift 34
	CAPREF_NAMED  shift 35
	ID  shift 43
	INTLITERAL  shift 38
	FLOATLITERAL  shift 39
	NOT  shift 31
	LPAREN  shift 37
	.  reduce 123 (src line 703)

	primary_expr  goto 87
	multiplicative_expr  goto 44
	additive_expr  goto 42
	postfix_expr  goto 86
	unary_expr  goto 91
	rel_expr  goto 156
	shift_expr  goto 40
	indexed_expr  goto 32
	id_expr  goto 41
	builtin_expr  goto 33
	mark_pos  goto 88

state 121
	assign_expr:  unary_expr ASSIGN opt_nl.logical_expr 
	mark_pos: .    (123)

	STRING  shift 36
	CAPREF  shift 34
	CAPREF_NAMED  shift 35
	ID  shift 43
	INTLITERAL  shift 38
	FLOATLITERAL  shift 39
	NOT  shift 31
	LPAREN  shift 37
	.  reduce 123 (src line 703)

	primary_expr  goto 28
	multiplicative_expr  goto 44
	additive_expr  goto 42
	postfix_expr  goto 86
	unary_expr  goto 91
	rel_expr  goto 30
	shift_expr  goto 40
	bitwise_expr  goto 25
	logical_expr  goto 157
	indexed_expr  goto 32
	id_expr  goto 41
	match_expr  goto 26
	builtin_expr  goto 33
	mark_pos  goto 88

state 122
	assign_expr:  unary_expr ADD_ASSIGN opt_nl.logical_expr 
	mark_pos: .    (123)

	STRING  shift 36
	CAPREF  shift 34
	CAPREF_NAMED  shift 35
	ID  shift 43
	INTLITERAL  shift 38
	FLOATLITERAL  shift 39
	NOT  shift 31
	LPAREN  shift 37
	.  reduce 123 (src line 703)

	primary_expr  goto 28
	multiplicative_expr  goto 44
	additive_expr  goto 42
	postfix_expr  goto 86
	unary_expr  goto 91
	rel_expr  goto 30
	shift_expr  goto 40
	bitwise_expr  goto 25
	logical_expr  goto 158
	indexed_expr  goto 32
	id_expr  goto 41
	match_expr  goto 26
	builtin_expr  goto 33
	mark_pos  goto 88

state 123
	match_expr:  primary_expr match_op opt_nl.pattern_expr 
	match_expr:  primary_expr match_op opt_nl.primary_expr 
	mark_pos: .    (123)

	STRING  shift 36
	CAPREF  shift 34
	CAPREF_NAMED  shift 35
	ID  shift 43
	INTLITERAL  shift 38
	FLOATLITERAL  shift 39
	LPAREN  shift 37
	.  reduce 123 (src line 703)

	primary_expr  goto 160
	indexed_expr  goto 32
	id_expr  goto 41
	concat_expr  goto 24
	pattern_expr  goto 159
	regex_pattern  goto 29
	builtin_expr  goto 33
	mark_pos  goto 129

state 124
	rel_expr:  rel_expr rel_op opt_nl.shift_expr 
	mark_pos: .    (123)

	STRING  shift 36
	CAPREF  shift 34
	CAPREF_NAMED  shift 35
	ID  shift 43
	INTLITERAL  shift 38
	FLOATLITERAL  shift 39
	NOT  shift 31
	LPAREN  shift 37
	.  reduce 123 (src line 703)

	primary_expr  goto 87
	multiplicative_expr  goto 44
	additive_expr  goto 42
	postfix_expr  goto 86
	unary_expr  goto 91
	shift_expr  goto 161
	indexed_expr  goto 32
	id_expr  goto 41
	builtin_expr  goto 33
	mark_pos  goto 88

state 125
	indexed_expr:  indexed_expr LSQUARE arg_expr_list.RSQUARE 
	arg_expr_list:  arg_expr_list.COMMA arg_expr 

	RSQUARE  shift 162
	COMMA  shift 163
	.  error


state 126
	arg_expr_list:  arg_expr.    (87)

	.  reduce 87 (src line 480)


state 127
	logical_expr:  logical_expr.logical_op opt_nl bitwise_expr 
	logical_expr:  logical_expr.logical_op opt_nl match_expr 
	arg_expr:  logical_expr.    (89)

	AND  shift 62
	OR  shift 63
	.  reduce 89 (src line 493)

	logical_op  goto 64

state 128
	arg_expr:  pattern_expr.    (90)

	.  reduce 90 (src line 496)


state 129
	builtin_expr:  mark_pos.BUILTIN LPAREN RPAREN 
	builtin_expr:  mark_pos.BUILTIN LPAREN arg_expr_list RPAREN 
	regex_pattern:  mark_pos.DIV in_regex REGEX DIV 

	BUILTIN  shift 49
	DIV  shift 50
	.  error


state 130
	primary_expr:  LPAREN logical_expr RPAREN.    (79)

	.  reduce 79 (src line 428)


state 131
	shift_expr:  shift_expr shift_op opt_nl.additive_expr 
	mark_pos: .    (123)

	STRING  shift 36
	CAPREF  shift 34
	CAPREF_NAMED  shift 35
	ID  shift 43
	INTLITERAL  shift 38
	FLOATLITERAL  shift 39
	NOT  shift 31
	LPAREN  shift 37
	.  reduce 123 (src line 703)

	primary_expr  goto 87
	multiplicative_expr  goto 44
	additive_expr  goto 164
	postfix_expr  goto 86
	unary_expr  goto 91
	indexed_expr  goto 32
	id_expr  goto 41
	builtin_expr  goto 33
	mark_pos  goto 88

state 132
	additive_expr:  additive_expr add_op opt_nl.multiplicative_expr 
	mark_pos: .    (123)

	STRING  shift 36
	CAPREF  shift 34
	CAPREF_NAMED  shift 35
	ID  shift 43
	INTLITERAL  shift 38
	FLOATLITERAL  shift 39
	NOT  shift 31
	LPAREN  shift 37
	.  reduce 123 (src line 703)

	primary_expr  goto 87
	multiplicative_expr  goto 165
	postfix_expr  goto 86
	unary_expr  goto 91
	indexed_expr  goto 32
	id_expr  goto 41
	builtin_expr  goto 33
	mark_pos  goto 88

state 133
	multiplicative_expr:  multiplicative_expr mul_op opt_nl.unary_expr 
	mark_pos: .    (123)

	STRING  shift 36
	CAPREF  shift 34
	CAPREF_NAMED  shift 35
	ID  shift 43
	INTLITERAL  shift 38
	FLOATLITERAL  shift 39
	NOT  shift 31
	LPAREN  shift 37
	.  reduce 123 (src line 703)

	primary_expr  goto 87
	postfix_expr  goto 86
	unary_expr  goto 166
	indexed_expr  goto 32
	id_expr  goto 41
	builtin_expr  goto 33
	mark_pos  goto 88

state 134
	stmt:  CONST id_expr opt_nl concat_expr.    (11)
	concat_expr:  concat_expr.PLUS opt_nl regex_pattern 
	concat_expr:  concat_expr.PLUS opt_nl id_expr 

	PLUS  shift 68
	.  reduce 11 (src line 131)


state 135
	regex_pattern:  mark_pos.DIV in_regex REGEX DIV 

	DIV  shift 50
	.  error


state 136
	conditional_stmt:  conditional_expr compound_stmt ELSE compound_stmt.    (14)

	.  reduce 14 (src line 146)


state 137
	compound_stmt:  LCURLY stmt_list RCURLY.    (22)

	.  reduce 22 (src line 192)


state 138
	builtin_expr:  mark_pos BUILTIN LPAREN RPAREN.    (85)

	.  reduce 85 (src line 467)


state 139
	builtin_expr:  mark_pos BUILTIN LPAREN arg_expr_list.RPAREN 
	arg_expr_list:  arg_expr_list.COMMA arg_expr 

	RPAREN  shift 167
	COMMA  shift 163
	.  error


state 140
	regex_pattern:  mark_pos DIV in_regex REGEX.DIV 

	DIV  shift 168
	.  error


state 141
	decorator_declaration:  mark_pos DEF ID compound_stmt.    (117)

	.  reduce 117 (src line 662)


state 142
	delete_stmt:  mark_pos DEL postfix_expr AFTER.DURATIONLITERAL 

	DURATIONLITERAL  shift 169
	.  error


state 143
	metric_decl_attr_spec:  metric_decl_attr_spec metric_by_spec.    (95)

	.  reduce 95 (src line 532)


state 144
	metric_decl_attr_spec:  metric_decl_attr_spec metric_as_spec.    (96)
